[metadata]
name = whiteboxml
version = 0.0.2
author = WhiteBox
author_email = info@whiteboxml.com
description = Fancy data functions that will make your life as a data scientist easier.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/whiteboxml/whitebox-utils
project_urls =
    Website = https://whiteboxml.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
